# MemorySDL

./: .gitignore  AssetManager.cpp  AssetManager.h  CMakeLists.txt  CMakePresets.json  Card.h  Game.cpp  Game.h  GridLayout.cpp  GridLayout.h  LICENSE  MemorySDL.sln  MemorySDL.vcxproj  MemorySDL.vcxproj.filters  README.md  main.cpp  pch.h
.github/workflows/: ci.yml
assets/: ASSETS_LICENSE.txt
include/: Game.h  GridLayout.h  SoundSystem.h
include/core/: Game.h  GameContext.h
include/game/: Card.h  CardData.h  CardDeck.h
include/scenes/: EndScene.h  GameScene.h  Scene.h  SceneManager.h  StartScene.h
include/systems/: AssetManager.h
include/ui/: Button.h  Card.h  GridLayout.h  UIAttempts.h  UIElement.h  UIImage.h
src/: AssetManager.cpp  AssetManager.h  EndScene.cpp  EndScene.h  Game.cpp  Game.h  GameContext.h  GameScene.cpp  GameScene.h  GridLayout.cpp  GridLayout.h  Scene.h  SceneManager.cpp  SceneManager.h  SoundSystem.cpp  SoundSystem.h  StartScene.cpp  StartScene.h  main.cpp
src/core/: Game.cpp
src/game/: Card.cpp  CardDeck.cpp
src/scenes/: EndScene.cpp  GameScene.cpp  SceneManager.cpp  StartScene.cpp
src/systems/: AssetManager.cpp  SoundSystem.cpp
src/ui/: Button.cpp  GridLayout.cpp  UIAttempts.cpp  UIImage.cpp
web/: index.html
